# Physical-humanoid-AI

./: .gitignore  README.md  docusaurus.config.js  feature_description.txt  package-lock.json  package.json  sidebars.js
.claude/: settings.local.json
Book-Physical-AI/: package-lock.json
backend/: .env.example  README.md  main.py  pyproject.toml  validation.py
backend/docusaurus_rag_ingestion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/rag_agent_service/: README.md  agent.py  chat.py  config.py  main.py  models.py  orchestrator.py  retrieval.py  test_service.py  utils.py
backend/rag_agent_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: glossary.mdx  index.mdx  intro.md  physical-ai-overview.md  references.mdx
docs/ai-brain/: apa-citation-guide.md  chapter-1-isaac-sim-photorealistic.mdx  chapter-2-isaac-ros-navigation.mdx  chapter-3-nav2-path-planning.mdx  chapter1-introduction.mdx  chapter2-advanced-concepts.mdx  chapter3-practical-implementation.mdx  references.md
docs/digital-twin/: chapter-1-gazebo-physics-simulation.mdx  chapter-2-unity-human-robot-interaction.mdx  chapter-3-sensor-simulation.mdx  chapter1-introduction.mdx  chapter2-advanced-concepts.mdx  chapter3-practical-implementation.mdx
docs/reference/: faq.md  glossary.md  troubleshooting.md
docs/ros2-humanoid/: chapter-1-ros2-nervous-system.mdx  chapter-2-python-ros-integration.mdx  chapter-3-urdf-humanoid-description.mdx  chapter1-introduction.mdx  chapter2-advanced-concepts.mdx  chapter3-practical-implementation.mdx
specs/master/: data-model.md  (+5 more)
(+108 files in other folders)
